--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
             <hr class="line">
         </div>
     </header>
+
+    <div class="row">
+        <div class="box">Test</div>
+        <div class="box">Test</div>
+        <div class="box">Test</div>
+        <!-- Add more boxes as needed -->
+    </div>
+
     <!-- Your website content goes here -->
 </body>
 </html>
