--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="box">Test</div>
         <div class="box">Test</div>
         <div class="box">Test</div>
-        <!-- Add more boxes as needed -->
     </div>
+    <!-- Add more rows of boxes as needed -->
 
     <!-- Your website content goes here -->
 </body>
