--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
     </header>
 
     <div class="row">
-        <div class="box">Test</div>
-        <div class="box">Test</div>
-        <div class="box">Test</div>
+        <div class="box" onclick="goToGame('flappy-bird')">Flappy Bird</div>
+        <div class="box" onclick="goToGame('tetris')">Tetris</div>
+        <div class="box" onclick="goToGame('snake')">Snake</div>
+        <!-- Add more games as needed -->
     </div>
-    <!-- Add more rows of boxes as needed -->
 
     <!-- Your website content goes here -->
+
+    <script>
+        function goToGame(gameName) {
+            window.location.href = gameName + '.html';
+        }
+    </script>
 </body>
 </html>
