--- a/flappy-bird.html
+++ b/flappy-bird.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flappy Bird</title>
+    <!-- Additional styles or scripts specific to Flappy Bird can be included here -->
+</head>
+<body>
+    <!-- Content for the Flappy Bird game goes here -->
+    <h1>Flappy Bird</h1>
+    <!-- Include the game itself (e.g., canvas element, game controls, etc.) -->
+</body>
+</html>
 
