--- a/snake.html
+++ b/snake.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake</title>
+    <!-- Additional styles or scripts specific to Snake can be included here -->
+</head>
+<body>
+    <!-- Content for the Snake game goes here -->
+    <h1>Snake</h1>
+    <!-- Include the game itself (e.g., canvas element, game controls, etc.) -->
+</body>
+</html>
 
