--- a/flappy-bird.html
+++ b/flappy-bird.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
-    <!-- Additional styles or scripts specific to Flappy Bird can be included here -->
+    <style>
+        /* CSS styles for the game */
+        /* Add your styles here */
+    </style>
 </head>
 <body>
-    <!-- Content for the Flappy Bird game goes here -->
-    <h1>Flappy Bird</h1>
-    <!-- Include the game itself (e.g., canvas element, game controls, etc.) -->
+    <!-- Flappy Bird game content -->
+    <canvas id="flappyBirdCanvas" width="400" height="600"></canvas>
+
+    <script>
+        // JavaScript code for Flappy Bird game
+        // Add your game logic here
+    </script>
 </body>
 </html>
-
