--- a/tetris.html
+++ b/tetris.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris</title>
-    <!-- Additional styles or scripts specific to Tetris can be included here -->
+    <style>
+        /* CSS styles for the game */
+        /* Add your styles here */
+    </style>
 </head>
 <body>
-    <!-- Content for the Tetris game goes here -->
-    <h1>Tetris</h1>
-    <!-- Include the game itself (e.g., canvas element, game controls, etc.) -->
+    <!-- Tetris game content -->
+    <canvas id="tetrisCanvas" width="400" height="600"></canvas>
+
+    <script>
+        // JavaScript code for Tetris game
+        // Add your game logic here
+    </script>
 </body>
 </html>
-
