--- a/snake.html
+++ b/snake.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
-    <!-- Additional styles or scripts specific to Snake can be included here -->
+    <style>
+        /* CSS styles for the game */
+        /* Add your styles here */
+    </style>
 </head>
 <body>
-    <!-- Content for the Snake game goes here -->
-    <h1>Snake</h1>
-    <!-- Include the game itself (e.g., canvas element, game controls, etc.) -->
+    <!-- Snake game content -->
+    <canvas id="snakeCanvas" width="400" height="400"></canvas>
+
+    <script>
+        // JavaScript code for Snake game
+        // Add your game logic here
+    </script>
 </body>
 </html>
-
