--- a/tetris.html
+++ b/tetris.html
@@ -5,81 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris</title>
     <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
         canvas {
             border: 1px solid black;
             display: block;
             margin: auto;
         }
+        .title {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 24px;
+            color: white;
+        }
+        .fullscreen-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            z-index: 1;
+        }
     </style>
 </head>
 <body>
+    <h1 class="title">Tetris</h1>
+    <button class="fullscreen-btn" onclick="toggleFullScreen()">Full Screen</button>
     <canvas id="gameCanvas" width="300" height="600"></canvas>
     <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-        const blockSize = 30;
-        const boardWidth = 10;
-        const boardHeight = 20;
-        const boardColor = '#f0f0f0';
-        const blockColor = '#333';
-
-        let board = [];
-        let currentPiece;
-        let gameOver = false;
-
-        // Initialize the game board
-        function initBoard() {
-            for (let row = 0; row < boardHeight; row++) {
-                board[row] = [];
-                for (let col = 0; col < boardWidth; col++) {
-                    board[row][col] = 0;
+        // Add your Tetris game code here
+        function toggleFullScreen() {
+            if (!document.fullscreenElement) {
+                document.documentElement.requestFullscreen();
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
                 }
             }
         }
-
-        // Draw the game board
-        function drawBoard() {
-            ctx.fillStyle = boardColor;
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            for (let row = 0; row < boardHeight; row++) {
-                for (let col = 0; col < boardWidth; col++) {
-                    if (board[row][col]) {
-                        ctx.fillStyle = blockColor;
-                        ctx.fillRect(col * blockSize, row * blockSize, blockSize, blockSize);
-                    }
-                }
-            }
-        }
-
-        // Main game loop
-        function gameLoop() {
-            if (!gameOver) {
-                update();
-                draw();
-            }
-            requestAnimationFrame(gameLoop);
-        }
-
-        // Update game state
-        function update() {
-            // Update logic here
-        }
-
-        // Draw game elements
-        function draw() {
-            drawBoard();
-            // Draw other game elements here
-        }
-
-        // Start the game
-        function startGame() {
-            initBoard();
-            gameLoop();
-        }
-
-        // Start the game when the window loads
-        window.onload = startGame;
     </script>
 </body>
 </html>
