--- a/snake.html
+++ b/snake.html
@@ -5,17 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
     <style>
-        /* CSS styles for the game */
-        /* Add your styles here */
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+        canvas {
+            border: 1px solid black;
+            display: block;
+            margin: auto;
+        }
+        .title {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 24px;
+            color: white;
+        }
+        .fullscreen-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            z-index: 1;
+        }
     </style>
 </head>
 <body>
-    <!-- Snake game content -->
-    <canvas id="snakeCanvas" width="400" height="400"></canvas>
-
+    <h1 class="title">Snake</h1>
+    <button class="fullscreen-btn" onclick="toggleFullScreen()">Full Screen</button>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
     <script>
-        // JavaScript code for Snake game
-        // Add your game logic here
+        // Add your Snake game code here
+        function toggleFullScreen() {
+            if (!document.fullscreenElement) {
+                document.documentElement.requestFullscreen();
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
+                }
+            }
+        }
     </script>
 </body>
 </html>
