--- a/flappy-bird.html
+++ b/flappy-bird.html
@@ -53,7 +53,7 @@
         const pipeSpeed = 2;
         let gameOver = false;
         let lastPipeTime = 0;
-        const minPipeDistance = 250; // Minimum distance between pipes
+        const minPipeDistance = 1000; // Minimum distance between pipes, increased to 4 times
 
         function drawBird() {
             ctx.fillStyle = 'yellow';
