--- a/tetris.html
+++ b/tetris.html
@@ -32,15 +32,25 @@
             cursor: pointer;
             z-index: 1;
         }
+        .control-btn {
+            margin: 20px;
+            padding: 30px;
+            font-size: 24px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 15px;
+        }
     </style>
 </head>
 <body>
     <h1 class="title">Tetris</h1>
     <button class="fullscreen-btn" onclick="toggleFullScreen()">Full Screen</button>
     <canvas id="gameCanvas" width="300" height="600"></canvas>
-    <button onclick="moveLeft()">Left</button>
-    <button onclick="moveRight()">Right</button>
-    <button onclick="rotate()">Rotate</button>
+    <button onclick="moveLeft()" class="control-btn">Left</button>
+    <button onclick="moveRight()" class="control-btn">Right</button>
+    <button onclick="rotate()" class="control-btn">Rotate</button>
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
