--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="row">
         <div class="box" onclick="goToGame('flappy-bird')">Flappy Bird</div>
         <div class="box" onclick="goToGame('tetris')">Tetris</div>
-        <div class="box" onclick="goToGame('snake')">Snake</div>
+        <div class="box" onclick="goToGame('Cookie Clicker')">Cookie Clicker</div>
+        <div class="box" onclick="goToGame('AR Test Answers')">AR Test Answers</div>
         <!-- Add more games as needed -->
     </div>
 
