--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="box" onclick="goToGame('flappy-bird')">Flappy Bird</div>
         <div class="box" onclick="goToGame('tetris')">Tetris</div>
         <div class="box" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
-        <div class="box" onclick="goToGame('AR Test Answers')">AR Test Answers</div>
+        <div class="box" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
         <!-- Add more games as needed -->
     </div>
 
