--- a/ar-test-answers.html
+++ b/ar-test-answers.html
@@ -3,54 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        canvas {
-            border: 1px solid black;
-            display: block;
-            margin: auto;
-            background-color: skyblue;
-        }
-        .title {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            font-size: 24px;
-            color: white;
-        }
-        .fullscreen-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            z-index: 1;
-        }
-    </style>
+    <title>CuesMath</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <h1 class="title">Flappy Bird</h1>
-    <button class="fullscreen-btn" onclick="toggleFullScreen()">Full Screen</button>
-    <canvas id="gameCanvas" width="400" height="600"></canvas>
-    <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
+    <header>
+        <div class="container">
+            <h1>Made By CueGaming</h1>
+            <hr class="line">
+        </div>
+    </header>
 
-        function toggleFullScreen() {
-            if (!document.fullscreenElement) {
-                document.documentElement.requestFullscreen();
-            } else {
-                if (document.exitFullscreen) {
-                    document.exitFullscreen();
-                }
-            }
+    <div class="row">
+        <div class="box" onclick="goToGame('flappy-bird')">Flappy Bird</div>
+        <div class="box" onclick="goToGame('tetris')">Tetris</div>
+        <div class="box" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
+        <div class="box" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
+        <!-- Add more games as needed -->
+    </div>
+
+    <!-- Your website content goes here -->
+
+    <script>
+        function goToGame(gameName) {
+            window.location.href = gameName + '.html';
         }
     </script>
 </body>
