--- a/harrypotter.html
+++ b/harrypotter.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CuesMath</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Made By CueGaming</h1>
+            <hr class="line">
+        </div>
+    </header>
+
+    <div class="row">
+        <div class="box" onclick="goToGame('')">Give Book Requests</div>
+        <div class="box" onclick="goToGame('')">Hunger Games</div>
+        <div class="box" onclick="goToGame('')">Refugee</div>
+        <div class="box" onclick="goToGame('harrypotter')">Harry Potter</div>
+        <!-- Add more games as needed -->
+    </div>
+
+    <!-- Your website content goes here -->
+
+    <script>
+        function goToGame(gameName) {
+            window.location.href = gameName + '.html';
+        }
+    </script>
+</body>
+</html>
 
