--- a/ar-test-answers.html
+++ b/ar-test-answers.html
@@ -15,10 +15,10 @@
     </header>
 
     <div class="row">
-        <div class="box" onclick="goToGame('flappy-bird')">Flappy Bird</div>
-        <div class="box" onclick="goToGame('tetris')">Tetris</div>
-        <div class="box" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
-        <div class="box" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
+        <div class="box" onclick="goToGame('')">Give Book Requests</div>
+        <div class="box" onclick="goToGame('')">Hunger Games</div>
+        <div class="box" onclick="goToGame('')">Refugee</div>
+        <div class="box" onclick="goToGame('harrypotter')">Harry Potter</div>
         <!-- Add more games as needed -->
     </div>
 
