--- a/refugee.html
+++ b/refugee.html
@@ -15,9 +15,16 @@
     </header>
 
     <div class="row">
-
         <!-- Add more games as needed -->
     </div>
+
+    <!-- Test Section -->
+    <section>
+        <h2>Test</h2>
+        <p>This is a big test in the middle of your HTML.</p>
+        <!-- You can add more content for the test here -->
+    </section>
+    <!-- End Test Section -->
 
     <!-- Your website content goes here -->
 
