--- a/refugee.html
+++ b/refugee.html
@@ -20,7 +20,7 @@
 
     <!-- Test Section -->
     <section>
-        <h2>Test</h2>
+        <h2>Refugee</h2>
         <p>﻿
 
 1.a boy with a bag of bread being attacked by two bullies
