--- a/refugee.html
+++ b/refugee.html
@@ -21,18 +21,14 @@
     <!-- Test Section -->
     <section>
         <h2>Refugee</h2>
-        <p>﻿
-
-1.a boy with a bag of bread being attacked by two bullies
+        <p>﻿1.a boy with a bag of bread being attacked by two bullies
 2.two enormous jugs of gasoline
 3.he asked the caption to take down the portrait of the fuhrer
-4.said they would need life vests for
-the boat
+4.said they would need life vests for the boat
 5.he slapped his father hard across the face
 6.they discovered the storm had taken the boat to the bahamas
 7.the ship had to leave, and he would make appeals to president roosevelt
-8.he pointed a gun at mahmoud's family, demanded money and made them get
-out
+8.he pointed a gun at mahmoud's family, demanded money and made them get out
 9.he jumped into the ocean and called for help to distract the coast guard
 10.the nazis had made her mother choose between saving her son or her daughter</p>
         <!-- You can add more content for the test here -->
