--- a/ar-test-answers.html
+++ b/ar-test-answers.html
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="box" onclick="goToGame('')">Give Book Requests</div>
-        <div class="box" onclick="goToGame('')">Hunger Games</div>
+        <div class="box" onclick="goToGame('hungergames')">Hunger Games MockingJay</div>
         <div class="box" onclick="goToGame('refugee')">Refugee</div>
         <div class="box" onclick="goToGame('harrypotter')">Harry Potter</div>
         <!-- Add more games as needed -->
