--- a/ar-test-answers.html
+++ b/ar-test-answers.html
@@ -15,7 +15,8 @@
     </header>
 
     <div class="row">
-        <div class="box" onclick="goToGame('')">Give Book Requests</div>
+        <!-- Replace this with a link -->
+        <a href="discord.gg/bqM4tJgaYh" class="box">Give Book Requests</a>
         <div class="box" onclick="goToGame('hungergames')">Hunger Games MockingJay</div>
         <div class="box" onclick="goToGame('refugee')">Refugee</div>
         <!-- Add more games as needed -->
