--- a/hungergames.html
+++ b/hungergames.html
@@ -20,7 +20,7 @@
 
     <!-- Test Section -->
     <section>
-        <h2>Refugee</h2>
+        <h2>The Hunger Games</h2>
         <p>1.The people of Thirteen deserved credit for staying alive against all odds
 2.Her half-naked, brused prep team was shackled to the wall
 3.Boggs tried to stop her, and Gale intervened, breaking Boggs nose
